--- a/index.html
+++ b/index.html
@@ -403,6 +403,13 @@
 						</li>
 					</ul>
 				</div>
+				<div class="follow">
+          			<h3>Подпишитесь на рассылку</h3>
+          			<label class="footer-field">
+                		<input type="email" class="footer-input" name="email" placeholder="E-mail"/>
+              		</label>
+          			<button class="follow-btn">Подписаться</button>
+        		</div>
 			</div>
 		</footer>
 		<!-- Modal window -->
