--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           			<label class="footer-field">
                 		<input type="email" class="footer-input" name="email" placeholder="E-mail"/>
               		</label>
-          			<button class="follow-btn">Подписаться</button>
+          			<button type="submit" class="follow-btn">Подписаться<svg class="icon-send"><use href="./images/icons.svg#icon-send"></use></svg></button>
         		</div>
 			</div>
 		</footer>
@@ -420,6 +420,46 @@
 						<use href="./images/icons.svg#icon-close"></use>
 					</svg>
 				</button>
+				<form class="form">
+              		<h2>Оставьте свои данные, мы вам перезвоним</h2>
+              		<label class="form-field">
+                		<input type="name" class="form-input" name="name" autofocus placeholder=""/>
+                		<span class="form-label">Имя</span>
+                		<svg class="icon">
+                  			<use href="images/icons.svg#input-name"></use>
+                		</svg>
+              		</label>
+              		<label class="form-field">
+                		<input type="tel" class="form-input" name="tel" placeholder=""/>
+                		<span class="form-label">Телефон</span>
+                		<svg class="icon">
+                  			<use href="images/icons.svg#input-phone"></use>
+                		</svg>
+              		</label>
+              		<label class="form-field">
+                		<input type="email" class="form-input" name="email" placeholder=""/>
+                		<span class="form-label">Почта</span>
+                		<svg class="icon">
+                  			<use href="images/icons.svg#input-mail"></use>
+                		</svg>
+              		</label>
+               		<label class="comment-field">
+                		<span>Комментарий</span>
+                		<textarea class="comment-area" name="" rows="5" placeholder="Введите текст"></textarea>
+              		</label>
+              		<label class="checkbox-label">
+                		<input class="checkbox" type="checkbox" name="" value="" />
+                		<svg class="icon-check-active">
+                  			<use href="images/icons.svg#check-active-full"></use>
+                		</svg>
+                		<svg class="icon-check">
+                  			<use href="images/icons.svg#icon-check"></use>
+                		</svg>
+              			<p>Соглашаюсь с рассылкой и принимаю<a href="#"> Условия договора</a>
+						</p>
+              		</label>
+					<button class="send" type="submit">Отправить</button>
+            	</form>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
