hw06 social links

--- a/index.html
+++ b/index.html
@@ -373,29 +373,29 @@
 				<div class="links">
 					<h3>Присоединяйтесь</h3>
 					<ul class="social-links">
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#instagram-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#twitter-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#facebook-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#linkedin-1"></use>
 								</svg>
