--- a/portfolio.html
+++ b/portfolio.html
@@ -260,35 +260,45 @@
 				<div class="links">
 					<h3>Присоединяйтесь</h3>
 					<ul class="social-links">
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#instagram-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#twitter-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#facebook-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="icon">
-							<a href="#">
+						<li class="social-icon">
+							<a href="#" class="footer-social-link">
 								<svg class="si">
 									<use href="./images/icons.svg#linkedin-1"></use>
 								</svg>
 							</a>
 						</li>
 					</ul>
+				</div>
+				<div class="follow">
+					<h3>Подпишитесь на рассылку</h3>
+					<label class="footer-field">
+						<input type="email" class="footer-input" name="email" placeholder="E-mail" />
+					</label>
+					<button type="submit" class="follow-btn">
+						Подписаться
+						<svg class="icon-send"><use href="./images/icons.svg#icon-send"></use></svg>
+					</button>
 				</div>
 			</div>
 		</footer>
