hw06-final send

--- a/index.html
+++ b/index.html
@@ -462,7 +462,14 @@
 							<svg class="icon">
 								<use href="images/icons.svg#input-mail"></use>
 							</svg>
-							<input class="form-input" type="email" name="user-email" id="user-email" placeholder=" " required />
+							<input
+								class="form-input"
+								type="email"
+								name="user-email"
+								id="user-email"
+								placeholder=" "
+								required
+							/>
 						</div>
 						<label class="form-label" for="user-notes">Комментарии</label>
 						<textarea
