--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 							</svg>
 							<input
 								class="form-input"
-								type="name"
+								type="text"
 								name="user-name"
 								id="user-name"
 								minlength="3"
