hw-06-send-to-mentor

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 								class="form-input"
 								type="tel"
 								name="user-phone"
-								id="user=phone"
+								id="user-phone"
 								pattern="\+?[0-9\s\-\(\)]+"
 								placeholder=" "
 								required
